# Recopied

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml  release.yml
scripts/: bump-version.sh  release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  settings.rs
src-tauri/src/clipboard/: mod.rs  types.rs  watcher.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  queries.rs
src/components/: ClipboardItemCard.tsx  ClipboardPopup.tsx  EmptyState.tsx  SearchBar.tsx  SettingsPanel.tsx
src/lib/: tauri.ts
src/types/: clipboard.ts
