[package]
name = "clipit"
version = "1.0.0"
description = "A lightweight Linux clipboard manager"
authors = ["ClipIt"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.33", features = ["bundled"] }
sha2 = "0.10"
dirs = "6"
image = "0.25"
arboard = { version = "3", features = ["wayland-data-control"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
